syntax = "proto3";

package pb;

option go_package = "./";

service ProblemService{
    rpc GetAllProblems(ProbNoParam) returns(ProblemList);
    rpc GetProblemWithTestCases(ProblemId) returns (GetProblemResponse);

    rpc SubmitCode(SubmissionRequest) returns(SubmissionResponse);
}

message SubmissionResponse {
    enum Status {
      OK = 0;    
      ERROR = 1; 
    }
    
    Status status = 1;             
    string message = 2;             
    int32 passed = 3;               
    int32 failed = 4;               
    string submission_id = 5;
}

message SubmissionRequest {
    string user_id = 1;       
    int32 problem_id = 2;    
    string code = 3;           
    string language = 4;    
}

message TestCase{
    string test_case_id = 1;
    string input = 2;
    string expected_output = 3;
}

message ProblemWithTestCases {
    Problem problem = 1;
    repeated TestCase test_cases = 2;
}

message GetProblemResponse {
    enum Status {
        OK = 0;
        ERROR = 1;
    }

    Status status = 1;
    string message = 2;
    oneof payload {
        string error = 3;
        ProblemWithTestCases data = 4;
    }
}

message ProblemId {
    int32 ID = 1;
}

message ProblemList {
    repeated Problem problems = 1;
}

message Problem{
    uint32 ID = 1;
    string Title = 2;
    string Discription = 3;
    string Difficulty = 4;
    string Type = 5;
    bool IsPremium = 6;
}

message ProblemResponse {
    enum Status {
        OK = 0;
        ERROR = 1;
    }

    Status status = 1;
    string message = 2;
    oneof payload {
        string error = 3;
        string data = 4;
    }
}

message ProbNoParam{}